# rules-system-bound

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  README.md  pyproject.toml  seed.yaml  value-repos.json
.github/: dependabot.yml
.github/workflows/: ci-python.yml
docs/: activation-audit.md  activation.md
src/rules_system_bound/: __init__.py  __main__.py  cli.py  config.py  container.py  idealization.py  interaction.py
tests/: test_cli.py  test_core.py
